unpackaged/main/default/objects/fferpcore__ErpMessagingSettings__c/fferpcore__ErpMessagingSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains settings that enable you to change messaging behavior in Foundations.</description>
    <label>FDN Messaging Settings</label>
</CustomObject>