unpackaged/main/default/objects/fferpcore__ErpMessagingSettings__c/fields/fferpcore__LoggingLevel__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__LoggingLevel__c</fullName>
    <defaultValue>"Errors"</defaultValue>
    <label>Logging Level</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>