unpackaged/main/default/objects/fferpcore__ErpMessagingSettings__c/fields/fferpcore__QueryBuilderMaximumLookdowns__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__QueryBuilderMaximumLookdowns__c</fullName>
    <label>Query Builder Maximum Lookdowns</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>