unpackaged/main/default/objects/fferpcore__ErpMessagingSettings__c/fields/fferpcore__QueryBuilderMaximumLookupDepth__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__QueryBuilderMaximumLookupDepth__c</fullName>
    <label>Query Builder Maximum Lookup Depth</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>