unpackaged/main/default/objects/fferpcore__ErpMessagingSettings__c/fields/fferpcore__QueryBuilderMaximumRelationships__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__QueryBuilderMaximumRelationships__c</fullName>
    <label>Query Builder Maximum Relationships</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>